src/objects/inscor__Sales_Order_Line_Tracking_Summary__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation</label>
        <referenceTo>inscor__Allocation__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Quote Line</label>
        <referenceTo>inscor__Customer_Quote_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>inscor__Invoice_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ Line</label>
        <referenceTo>inscor__RFQ_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>inscor__Receipt__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Solicitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitation</label>
        <referenceTo>inscor__Government_Solicitation__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking Summaries</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line Tracking Summary</label>
    <nameField>
        <displayFormat>SOTS-{0}</displayFormat>
        <label>Sales Order Line Tracking Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Line Tracking Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>